[gd_scene load_steps=5 format=2]

[ext_resource path="res://tileset/hex_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://MapBuilder.gd" type="Script" id=2]
[ext_resource path="res://MainCamera.gd" type="Script" id=3]
[ext_resource path="res://HexMap.gd" type="Script" id=5]

[node name="MapBuilder" type="Node2D"]
script = ExtResource( 2 )

[node name="HexMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 20 )
cell_half_offset = 0
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
format = 1
script = ExtResource( 5 )

[node name="MainCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 5, 5 )
script = ExtResource( 3 )

[node name="UI Layer" type="CanvasLayer" parent="."]

[node name="UI Root" type="Control" parent="UI Layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="PanelContainer" type="PanelContainer" parent="UI Layer/UI Root"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -148.0
margin_bottom = 54.0

[node name="Map Panel" type="VBoxContainer" parent="UI Layer/UI Root/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 141.0
margin_bottom = 135.0
custom_constants/separation = 12
alignment = 2

[node name="GenMapButton" type="Button" parent="UI Layer/UI Root/PanelContainer/Map Panel"]
margin_right = 134.0
margin_bottom = 20.0
text = "Generate New Map"

[node name="AnimateControls" type="VBoxContainer" parent="UI Layer/UI Root/PanelContainer/Map Panel"]
margin_top = 32.0
margin_right = 134.0
margin_bottom = 66.0

[node name="GenSpeedSlider" type="HSlider" parent="UI Layer/UI Root/PanelContainer/Map Panel/AnimateControls"]
margin_right = 134.0
margin_bottom = 16.0
min_value = 1.0
max_value = 500.0
value = 1.0
scrollable = false
tick_count = 5
ticks_on_borders = true

[node name="AnimateLabel" type="Label" parent="UI Layer/UI Root/PanelContainer/Map Panel/AnimateControls"]
margin_top = 20.0
margin_right = 134.0
margin_bottom = 34.0
text = "Animate Speed"
align = 2

[node name="SizeControls" type="VBoxContainer" parent="UI Layer/UI Root/PanelContainer/Map Panel"]
margin_top = 78.0
margin_right = 134.0
margin_bottom = 112.0

[node name="SizeSlider" type="HSlider" parent="UI Layer/UI Root/PanelContainer/Map Panel/SizeControls"]
margin_right = 134.0
margin_bottom = 16.0
min_value = 1.0
max_value = 500.0
step = 5.0
value = 1.0
scrollable = false
tick_count = 10
ticks_on_borders = true

[node name="SizeLabel" type="Label" parent="UI Layer/UI Root/PanelContainer/Map Panel/SizeControls"]
margin_top = 20.0
margin_right = 134.0
margin_bottom = 34.0
text = "Size"
align = 2

[node name="HSeparator" type="HSeparator" parent="UI Layer/UI Root/PanelContainer/Map Panel"]
margin_top = 124.0
margin_right = 134.0
margin_bottom = 128.0

[node name="Perc Panel" type="VBoxContainer" parent="UI Layer/UI Root/PanelContainer/Map Panel"]
visible = false
margin_top = 140.0
margin_right = 134.0
margin_bottom = 174.0

[node name="BorealFlat" type="VBoxContainer" parent="UI Layer/UI Root/PanelContainer/Map Panel/Perc Panel"]
margin_right = 134.0
margin_bottom = 34.0

[node name="BorealFlatSlider" type="HSlider" parent="UI Layer/UI Root/PanelContainer/Map Panel/Perc Panel/BorealFlat"]
margin_right = 134.0
margin_bottom = 16.0
value = 1.0
scrollable = false
tick_count = 1
ticks_on_borders = true

[node name="BorealFlatLabel" type="Label" parent="UI Layer/UI Root/PanelContainer/Map Panel/Perc Panel/BorealFlat"]
margin_top = 20.0
margin_right = 134.0
margin_bottom = 34.0
text = "Grass"
align = 2

[connection signal="pressed" from="UI Layer/UI Root/PanelContainer/Map Panel/GenMapButton" to="." method="_on_GenMapButton_pressed"]
[connection signal="value_changed" from="UI Layer/UI Root/PanelContainer/Map Panel/AnimateControls/GenSpeedSlider" to="." method="_on_GenSpeedSlider_value_changed"]
[connection signal="value_changed" from="UI Layer/UI Root/PanelContainer/Map Panel/SizeControls/SizeSlider" to="." method="_on_SizeSlider_value_changed"]
[connection signal="value_changed" from="UI Layer/UI Root/PanelContainer/Map Panel/Perc Panel/BorealFlat/BorealFlatSlider" to="." method="_on_LandType_value_changed" binds= [ "boreal_flat", "BorealFlat", "Grass" ]]
